:arrow_up: Updated to alpine 3.10 and openJDK 11